--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.15.1"
   },
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4"
   }
 }
